# stock-analyzer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  LICENSE-THIRD-PARTY  README.md  README_CN.md  pyproject.toml
.github/workflows/: docker-image.yml
docker/: Dockerfile  docker-compose.yml
src/ashare_analyzer/: __init__.py  __main__.py  config.py  constants.py  dependencies.py  exceptions.py
src/ashare_analyzer/ai/: __init__.py  analyzer.py  clients.py  interface.py  tools.py
src/ashare_analyzer/analysis/: __init__.py  analyzer.py  context.py
src/ashare_analyzer/data/: __init__.py  base.py  manager.py  stock_name_resolver.py
src/ashare_analyzer/industry/: __init__.py  classifier.py  constants.py  normalizer.py
src/ashare_analyzer/infrastructure/: __init__.py
src/ashare_analyzer/models/: __init__.py  chip.py  quotes.py  results.py  signals.py
src/ashare_analyzer/notification/: __init__.py  builder.py  context.py  custom.py  discord.py  email.py  report_generator.py  service.py  telegram.py
src/ashare_analyzer/search/: __init__.py  base.py  filter.py  impl.py  service.py
src/ashare_analyzer/storage/: __init__.py  database.py  models.py
src/ashare_analyzer/utils/: __init__.py  console_display.py  logging_config.py  stock_code.py
src/ashare_analyzer/valuation/: __init__.py  classifier.py  methods.py  registry.py
src/stock_analyzer/: __main__.py  analyzer.py  config.py  constants.py  context_builders.py  dependencies.py  exceptions.py  models.py  scheduler.py  setup_wizard.py  stock_name_resolver.py
src/stock_analyzer/agents/: __init__.py  base.py  chip_agent.py  coordinator.py  decision_agent.py  fundamental_agent.py  news_sentiment_agent.py  portfolio_manager.py  risk_agent.py  risk_manager.py  style_agent.py  technical_agent.py  utils.py  valuation_agent.py
src/stock_analyzer/ai/: __init__.py  analyzer.py  clients.py  interface.py  prompts.py
tests/: conftest.py
tests/unit/: test_constants.py
(+145 files in other folders)
