[project]
name = "stock-analyzer"
version = "0.1.0"
description = "AI-powered A-share stock analysis system with multi-agent architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "akshare>=1.18.21",
    "baostock>=0.8.9",
    "cachetools>=7.0.0",
    "click>=8.3.1",
    "dependency-injector>=4.41.0",
    "efinance>=0.5.5.2",
    "fake-useragent>=2.2.0",
    "httpx[socks]>=0.28.1",
    "litellm>=1.81.8",
    "lxml-html-clean>=0.4.3",
    "markdown2>=2.5.4",
    "newspaper3k>=0.2.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pytdx>=1.72",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "schedule>=1.2.2",
    "serpapi>=0.1.5",
    "sqlalchemy>=2.0.46",
    "tavily-python>=0.0.21",
    "tenacity>=9.1.2",
    "tushare>=1.4.24",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
stock-analyzer = "stock_analyzer.__main__:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
addopts = "--tb=short --cov=stock_analyzer --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: marks tests that call real data provider APIs (may consume quota)",
    "slow: tests that are slow to run",
]
filterwarnings = [
    "ignore::DeprecationWarning:lark_oapi.*",
    "ignore::DeprecationWarning:.*well_known_types.*",
    "ignore::SyntaxWarning:efinance.*",
]
